Fixed problem with calendar widget's cells alignment

--- a/src/main/webapp/css/calendar.css
+++ b/src/main/webapp/css/calendar.css
@@ -61,11 +61,9 @@ p.description {
 	font-weight: bold;
 	color: #000000;
 }
-/*
 .wc-grid-row-events > .wc-grid-timeslot-header{
-	position: fixed;
+	vertical-align: top;
 }
-*/
 .horus{
 	font-size: 12px;
 	/*opacity:0.1;*/
